@@ -1,4 +1,9 @@
 2007-11-08  Matthias Clasen <mclasen@redhat.com>
+
+	* glib/gmain.c (g_main_loop_quit): Expand the docs 
+	a bit.  (#317775, Søren Sandmann)
+
+2007-11-08  Matthias Clasen <mclasen@redhat.com>
 	
 	* autogen.sh: Accept automake 1.10, too
 
